fix background image not showing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/images/paper.jpg");
+    background-image: url("./images/paper.jpg");
     font-family: 'Courier New', Courier, monospace;
 }
 
